--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,14 +18,15 @@
     <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="../iconos/logoflota.png" type="image/png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</noscript>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather" as="style"
-        onload="this.rel='stylesheet'">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/animate.css">
     <title>Contacto | FlotaWines Conecta con Nosotros</title>
 </head>
 
@@ -35,7 +36,7 @@
         <nav class="navbar navbar-expand-lg botonera">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../iconos/flota-logo-blanco2.png" alt="logo de flota wines" id="logo" class="iconowines">
+                    <img src="../iconos/logo-la-flota-hd.png" alt="logo de flota wines" id="logo" class="iconowines">
                 </a>
                 <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -65,7 +66,7 @@
         </nav>
     </header>
     <!-- Main Content -->
-    <main class="main-form animate__animated hidden animated-element">
+    <main class="main-form hidden">
         <section class="section-form ">
             <div class="container-contact">
                 <div class="section-form-container">
@@ -139,7 +140,7 @@
                     <a href="#" class="cta-button"><button class="btn">Más información</button></a>
                 </div>
                 <div class="distribution-image">
-                    <img src="../img/la-Flota.png" alt="Distribución de La Flota Malbec" class="floating">
+                    <img src="../img/la-Flota.webp" alt="Distribución de La Flota Malbec" class="floating">
                 </div>
             </div>
         </section>
