--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,14 +21,14 @@
     -->
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="../iconos/logoflota.png" type="image/png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</noscript>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Merriweather" as="style"
-        onload="this.rel='stylesheet'">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/animate.css">
     <title>Nosotros - Flota Wines </title>
 </head>
 
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-lg botonera">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../iconos/flota-logo-blanco2.png" alt="logo de flota wines" id="logo" class="iconowines">
+                    <img src="../iconos/logo-la-flota-hd.png" alt="logo de flota wines" id="logo" class="iconowines">
                 </a>
                 <button class="navbar-toggler button-burger" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -94,7 +94,7 @@
     <main>
 
         <div class="nosotros-container">
-            <section class="section-nosotros animate__animated hidden animated-element">
+            <section class="section-nosotros hidden">
                 <div class="about-image">
                     <img src="../img/picnic.webp" alt="imagen sobre la flota">
                 </div>
@@ -111,7 +111,7 @@
                     </a>
                 </div>
             </section>
-            <section id="equipo" class="team animate__animated hidden animated-element">
+            <section id="equipo" class="team hidden">
                 <div class="container">
                     <h2>Nuestro Equipo</h2>
                     <div class="team-grid">
@@ -140,7 +140,7 @@
                 </div>
             </section>
 
-            <section class="laflota-history animate__animated hidden animated-element">
+            <section class="laflota-history hidden">
                 <div class="laflota-history__container">
                     <div class="laflota-history__content">
                         <h2 class="laflota-history__title">Nuestra Historia</h2>
@@ -157,7 +157,7 @@
                 </div>
             </section>
 
-            <section class="laflota-process animate__animated hidden animated-element">
+            <section class="laflota-process hidden">
                 <div class="laflota-process__container">
                     <h2 class="laflota-process__title">El Arte de Nuestro Vino</h2>
                     <div class="laflota-process__grid">
@@ -217,7 +217,7 @@
                 </div>
             </section>
 
-            <section class="laflota-origins animate__animated hidden animated-element">
+            <section class="laflota-origins hidden">
                 <div class="laflota-origins__container">
                     <div class="laflota-origins__content">
                         <h2 class="laflota-origins__title" id="origin">Los Orígenes de La Flota</h2>
