--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:title" content="La Flota Wines - Vinos Premium">
     <meta property="og:description"
         content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
-    <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
-    <meta property="og:url" content="https://laflotawines.com.ar">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
-    <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
-    <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">img/la-Flota.png
-    -->
+        <meta property="og:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
+        <meta property="og:url" content="https://laflotawines.com.ar">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
+        <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
+        
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="./iconos/logoflota.png" type="image/png">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style"
