--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre la Flota de vinos de FlotaWines. Cada botella de nuestro Malbec está inspirada en la aventura marítima, el viento y el océano que influyen en su sabor.">
+    <meta name="description" content="Conoce la historia detras de la FlotaWines, un vino Malbec inspirado en la conexión entre el mar y el viñedo.">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
     <meta name="keywords" content="FlotaWines, flota de vinos, vino inspirado en el mar, Malbec y mar, aventura marítima en vino">
     <meta property="og:title" content="La Flota Wines - Vinos Premium">
     <meta property="og:description"
-        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
+        content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
     <meta name="author" content="FlotaWines">
-    <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
-    <meta property="og:url" content="https://laflotawines.com.ar">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
-    <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
-    <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
-    -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
+        <meta property="og:url" content="https://laflotawines.com.ar">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
+        <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="../iconos/logoflota.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
