--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,14 +11,13 @@
     <meta property="og:title" content="La Flota Wines -La Historia del Malbec del Mar">
     <meta name="description" content="Conoce la historia detras de la FlotaWines, un vino Malbec inspirado en la conexión entre el mar y el viñedo.">
     <meta name="author" content="FlotaWines">
-    <!--meta property="og:image" content="https://laflotawines.com.ar/images/logo.jpg">
-    <meta property="og:url" content="https://laflotawines.com.ar">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
-    <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
-    <meta name="twitter:image" content="https://laflotawines.com.ar/images/logo.jpg">
-    -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
+        <meta property="og:url" content="https://laflotawines.com.ar">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
+        <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
     <link rel="canonical" href="https://laflotawines.com.ar">
     <link rel="icon" href="../iconos/logoflota.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="print" onload="this.media='all'" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
