--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 
             <section class="image-grid hidden">
                 <div class="grid-item">
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80"
-                        alt="Viñedo">
+                    <img src="./img/campo.webp" alt ="campo">
                 </div>
                 <div class="grid-item">
                     <img src="./img/vino-carne.webp" alt="vino y carne">
