--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </button>
                     </a>
                 </div>
-                <img src="./img/la-flota.webp" alt="botella de vino la flota" class="info-image">
+                <img src="./img/la-flota.webpg" alt="botella de vino la flota" class="info-image">
                 <img src="./iconos/logo-la-flota-hd.webp" alt="logo de la flota" class="logo-info">
             </div>
         </section>
